// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawDailyStory çizim kaydı > boş gün 1`] = `
"["addColorStop","createLinearGradient(0,0,0,1920)",0,"#00111f"]
["addColorStop","createLinearGradient(0,0,0,1920)",0.5,"#00192d"]
["addColorStop","createLinearGradient(0,0,0,1920)",1,"#011d31"]
["=","fillStyle","createLinearGradient(0,0,0,1920)"]
["fillRect",0,0,1080,1920]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",0,"rgba(251, 125, 39, 0.22)"]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",1,"rgba(251, 125, 39, 0)"]
["=","fillStyle","createRadialGradient(1080,0,0,1080,0,900)"]
["fillRect",0,0,1080,1920]
["beginPath"]
["moveTo",104,260]
["arcTo",236,260,236,436,44]
["arcTo",236,436,60,436,44]
["arcTo",60,436,60,260,44]
["arcTo",60,260,236,260,44]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",4]
["=","strokeStyle","#fb7d27"]
["stroke"]
["=","fillStyle","#ffffff"]
["=","font","900 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","GOLLAZIM",148,348]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#fb7d27"]
["=","font","900 54px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 54px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GOL LAZIM ANALİZ",270,314]
["=","fillStyle","#8ea4b8"]
["=","font","600 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","600 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","5 Ekim 2026  •  Sonuçlar",270,372]
["=","font","500 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","Önerilen maçların gerçekleşen sonuçları",270,420]
["=","fillStyle","#ffffff"]
["=","font","900 76px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 76px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GÜNÜN ANALİZ SONUÇLARI",60,512]
["beginPath"]
["moveTo",64,532]
["arcTo",180,532,180,540,4]
["arcTo",180,540,60,540,4]
["arcTo",60,540,60,532,4]
["arcTo",60,532,180,532,4]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["moveTo",94,566]
["arcTo",1020,566,1020,742,34]
["arcTo",1020,742,60,742,34]
["arcTo",60,742,60,566,34]
["arcTo",60,566,1020,566,34]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#8ea4b8"]
["=","font","800 84px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","—",100,698]
["=","fillStyle","#8ea4b8"]
["=","font","700 32px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GENEL İSABET",187.04000000000002,636]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Sonuçlanmış öneri yok",187.04000000000002,694]
["=","font","500 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","600 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","600 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 26px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["beginPath"]
["moveTo",86,758]
["arcTo",1020,758,1020,866,26]
["arcTo",1020,866,60,866,26]
["arcTo",60,866,60,758,26]
["arcTo",60,758,1020,758,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","—",990,814]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","2.5 ÜST",90,810]
["beginPath"]
["moveTo",98,832]
["arcTo",990,832,990,848,8]
["arcTo",990,848,90,848,8]
["arcTo",90,848,90,832,8]
["arcTo",90,832,990,832,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["moveTo",86,882]
["arcTo",1020,882,1020,990,26]
["arcTo",1020,990,60,990,26]
["arcTo",60,990,60,882,26]
["arcTo",60,882,1020,882,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","—",990,938]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","İLK YARI 0.5 ÜST",90,934]
["beginPath"]
["moveTo",98,956]
["arcTo",990,956,990,972,8]
["arcTo",990,972,90,972,8]
["arcTo",90,972,90,956,8]
["arcTo",90,956,990,956,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["moveTo",86,1006]
["arcTo",1020,1006,1020,1114,26]
["arcTo",1020,1114,60,1114,26]
["arcTo",60,1114,60,1006,26]
["arcTo",60,1006,1020,1006,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","—",990,1062]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","2. YARI 0.5 ÜST",90,1058]
["beginPath"]
["moveTo",98,1080]
["arcTo",990,1080,990,1096,8]
["arcTo",990,1096,90,1096,8]
["arcTo",90,1096,90,1080,8]
["arcTo",90,1080,990,1080,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["moveTo",86,1130]
["arcTo",1020,1130,1020,1238,26]
["arcTo",1020,1238,60,1238,26]
["arcTo",60,1238,60,1130,26]
["arcTo",60,1130,1020,1130,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","—",990,1186]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","KG VAR",90,1182]
["beginPath"]
["moveTo",98,1204]
["arcTo",990,1204,990,1220,8]
["arcTo",990,1220,90,1220,8]
["arcTo",90,1220,90,1204,8]
["arcTo",90,1204,990,1204,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["moveTo",86,1254]
["arcTo",1020,1254,1020,1362,26]
["arcTo",1020,1362,60,1362,26]
["arcTo",60,1362,60,1254,26]
["arcTo",60,1254,1020,1254,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","—",990,1310]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","2.5 ÜST & KG VAR",90,1306]
["beginPath"]
["moveTo",98,1328]
["arcTo",990,1328,990,1344,8]
["arcTo",990,1344,90,1344,8]
["arcTo",90,1344,90,1328,8]
["arcTo",90,1328,990,1328,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","font","500 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","Her öneri kendi kategorisinde ayrı sayılmıştır; aynı maç",60,1418]
["fillText","birden fazla listede yer alabilir.",60,1456]
["=","fillStyle","#123a5c"]
["fillRect",60,1482,960,2]
["=","font","800 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["fillText","Telegram:",60,1531]
["=","font","600 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","https://t.me/gollazimanaliz",272.8,1531]
["=","font","800 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["fillText","Instagram:",60,1583]
["=","font","600 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","@gollazim",294.08000000000004,1583]
["=","font","500 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","Bu bir istatistik taramasıdır; bahis tavsiyesi değildir ve sonuç garantisi",60,1632]
["fillText","vermez. 18+",60,1662]"
`;

exports[`drawDailyStory çizim kaydı > normal gün (bir kategori boş) 1`] = `
"["addColorStop","createLinearGradient(0,0,0,1920)",0,"#00111f"]
["addColorStop","createLinearGradient(0,0,0,1920)",0.5,"#00192d"]
["addColorStop","createLinearGradient(0,0,0,1920)",1,"#011d31"]
["=","fillStyle","createLinearGradient(0,0,0,1920)"]
["fillRect",0,0,1080,1920]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",0,"rgba(251, 125, 39, 0.22)"]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",1,"rgba(251, 125, 39, 0)"]
["=","fillStyle","createRadialGradient(1080,0,0,1080,0,900)"]
["fillRect",0,0,1080,1920]
["beginPath"]
["moveTo",104,260]
["arcTo",236,260,236,436,44]
["arcTo",236,436,60,436,44]
["arcTo",60,436,60,260,44]
["arcTo",60,260,236,260,44]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",4]
["=","strokeStyle","#fb7d27"]
["stroke"]
["=","fillStyle","#ffffff"]
["=","font","900 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","GOLLAZIM",148,348]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#fb7d27"]
["=","font","900 54px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 54px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GOL LAZIM ANALİZ",270,314]
["=","fillStyle","#8ea4b8"]
["=","font","600 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","600 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","5 Ekim 2026  •  Sonuçlar",270,372]
["=","font","500 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","Önerilen maçların gerçekleşen sonuçları",270,420]
["=","fillStyle","#ffffff"]
["=","font","900 76px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 76px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GÜNÜN ANALİZ SONUÇLARI",60,512]
["beginPath"]
["moveTo",64,532]
["arcTo",180,532,180,540,4]
["arcTo",180,540,60,540,4]
["arcTo",60,540,60,532,4]
["arcTo",60,532,180,532,4]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["moveTo",94,566]
["arcTo",1020,566,1020,742,34]
["arcTo",1020,742,60,742,34]
["arcTo",60,742,60,566,34]
["arcTo",60,566,1020,566,34]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#fb7d27"]
["=","font","900 124px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%65",100,698]
["=","fillStyle","#8ea4b8"]
["=","font","700 32px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GENEL İSABET",348.32000000000005,636]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 44px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 40px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 40px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","31 önerinin 20 tanesi tuttu",348.32000000000005,694]
["=","font","500 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","600 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","600 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 26px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","500 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["beginPath"]
["moveTo",86,758]
["arcTo",1020,758,1020,866,26]
["arcTo",1020,866,60,866,26]
["arcTo",60,866,60,758,26]
["arcTo",60,758,1020,758,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["fillText","%40",990,814]
["=","fillStyle","#8ea4b8"]
["=","font","700 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","4/10",816.16,814]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","2.5 ÜST",90,810]
["beginPath"]
["moveTo",98,832]
["arcTo",990,832,990,848,8]
["arcTo",990,848,90,848,8]
["arcTo",90,848,90,832,8]
["arcTo",90,832,990,832,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["moveTo",98,832]
["arcTo",450,832,450,848,8]
["arcTo",450,848,90,848,8]
["arcTo",90,848,90,832,8]
["arcTo",90,832,450,832,8]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["moveTo",86,882]
["arcTo",1020,882,1020,990,26]
["arcTo",1020,990,60,990,26]
["arcTo",60,990,60,882,26]
["arcTo",60,882,1020,882,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["fillText","%88",990,938]
["=","fillStyle","#8ea4b8"]
["=","font","700 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","7/8",816.16,938]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","İLK YARI 0.5 ÜST",90,934]
["beginPath"]
["moveTo",98,956]
["arcTo",990,956,990,972,8]
["arcTo",990,972,90,972,8]
["arcTo",90,972,90,956,8]
["arcTo",90,956,990,956,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["moveTo",98,956]
["arcTo",877.5,956,877.5,972,8]
["arcTo",877.5,972,90,972,8]
["arcTo",90,972,90,956,8]
["arcTo",90,956,877.5,956,8]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["moveTo",86,1006]
["arcTo",1020,1006,1020,1114,26]
["arcTo",1020,1114,60,1114,26]
["arcTo",60,1114,60,1006,26]
["arcTo",60,1006,1020,1006,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["fillText","%90",990,1062]
["=","fillStyle","#8ea4b8"]
["=","font","700 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","9/10",816.16,1062]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","2. YARI 0.5 ÜST",90,1058]
["beginPath"]
["moveTo",98,1080]
["arcTo",990,1080,990,1096,8]
["arcTo",990,1096,90,1096,8]
["arcTo",90,1096,90,1080,8]
["arcTo",90,1080,990,1080,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["moveTo",98,1080]
["arcTo",900,1080,900,1096,8]
["arcTo",900,1096,90,1096,8]
["arcTo",90,1096,90,1080,8]
["arcTo",90,1080,900,1080,8]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["moveTo",86,1130]
["arcTo",1020,1130,1020,1238,26]
["arcTo",1020,1238,60,1238,26]
["arcTo",60,1238,60,1130,26]
["arcTo",60,1130,1020,1130,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","—",990,1186]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","KG VAR",90,1182]
["beginPath"]
["moveTo",98,1204]
["arcTo",990,1204,990,1220,8]
["arcTo",990,1220,90,1220,8]
["arcTo",90,1220,90,1204,8]
["arcTo",90,1204,990,1204,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["moveTo",86,1254]
["arcTo",1020,1254,1020,1362,26]
["arcTo",1020,1362,60,1362,26]
["arcTo",60,1362,60,1254,26]
["arcTo",60,1254,1020,1254,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["=","textBaseline","alphabetic"]
["=","textAlign","right"]
["=","font","900 66px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["fillText","%0",990,1310]
["=","fillStyle","#8ea4b8"]
["=","font","700 42px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","0/3",816.16,1310]
["=","textAlign","left"]
["=","fillStyle","#ffffff"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 46px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","2.5 ÜST & KG VAR",90,1306]
["beginPath"]
["moveTo",98,1328]
["arcTo",990,1328,990,1344,8]
["arcTo",990,1344,90,1344,8]
["arcTo",90,1344,90,1328,8]
["arcTo",90,1328,990,1328,8]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","font","500 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","Her öneri kendi kategorisinde ayrı sayılmıştır; aynı maç",60,1418]
["fillText","birden fazla listede yer alabilir.",60,1456]
["=","fillStyle","#123a5c"]
["fillRect",60,1482,960,2]
["=","font","800 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["fillText","Telegram:",60,1531]
["=","font","600 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","https://t.me/gollazimanaliz",272.8,1531]
["=","font","800 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["fillText","Instagram:",60,1583]
["=","font","600 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","@gollazim",294.08000000000004,1583]
["=","font","500 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","Bu bir istatistik taramasıdır; bahis tavsiyesi değildir ve sonuç garantisi",60,1632]
["fillText","vermez. 18+",60,1662]"
`;
